client/components/app.scss
body{
	//required for react-motion-drawer
	overflow: hidden;
}
/* LAYOUTS */
#app-container {
	
}

/* COMPONENTS */
#feed-container {
    // width: 400px;
    width:100%;
    position: fixed;
    height: 100vh;
    overflow: auto;
    // right: 0;
    top: 0;
    padding-top:60px;
}
.post {
	text-align: left;
    position: relative;
    margin: 1px;
    z-index: 0;
    padding: 15px;
    background: #fff;
    // border-radius: 3px;
    box-shadow: 0 1px 1px rgba(0, 0, 0, 0.2);
    color:#001d2f;
    &:hover{
    	background:rgba(230, 230, 230, 0.1);
    }
}
.npUl{
	.blip{
		display: inline-block;
	    margin: 5px;
	    border-radius: 8px;
	    border: solid 1px #bfbfbf;
	    background: white;
	    font-weight: 200;
	    outline:none;
	    font-size:14px;
	    p {
		    margin: 8px;
	    }
	    &:hover, &.selected{
	    	border-color:#1DA1F2;
	    	color:#1DA1F2;
	    	font-weight:400;
	    	cursor: pointer; 
	    	cursor: hand;
	    }
	}	
}

/* UI GLOBALS */
body {
	font-family: 'Roboto', sans-serif;
}
.noselect {
  -webkit-touch-callout: none; /* iOS Safari */
    -webkit-user-select: none; /* Safari */
     -khtml-user-select: none; /* Konqueror HTML */
       -moz-user-select: none; /* Firefox */
        -ms-user-select: none; /* Internet Explorer/Edge */
            user-select: none; /* Non-prefixed version, currently
                                  supported by Chrome and Opera */
}
.slidingMenu{
	background:white;
}
.np-title{
	padding:5px 15px;
	position: fixed;
	top: 0;
	height: 50px;
	z-index: 10;
	width: 100%;
	background:#fbfbfb;
	border-bottom: 0;
	p {
		position: inherit;
	}
}
.np-border{
	box-shadow: 0 1px 3px rgba(0, 0, 0, .2);
}
.btn {
    font: inherit;
    bottom: 16px;
    width: 70px;
    padding: 4px 15px;
    border-radius: 3px;
    transition: background .2s;
    border: 1px solid #03a9f4;
    &.yes {
    	background-color: #03a9f4;
    	color:white;
    }
}

